<resources>
    <string name="app_name">Fall Guys Guide</string>
    <string name="gates">Gates guide</string>
    <string name="gates_help">Gates Help</string>
    <string name="back">Back</string>
    <string name="see_saw">See Saw</string>
    <string name="roll_out">Roll Out</string>
    <string name="hit_parade">Hit Parade</string>
    <string name="background">background</string>
    <string name="block_party">Block Party</string>
    <string name="rock">Rock \'N\' Roll</string>
    <string name="egg_scramble">Egg Scramble</string>
    <string name="dizzy_heights">Dizzy Heights</string>
    <string name="hoopsie_daisy">Hoopsie Daisy</string>
    <string name="whirlygig">The Whirlygig</string>
    <string name="slime_climb">Slime Climb</string>
    <string name="fruit_chute">Fruit Chute</string>
    <string name="jump_club">Jump Club</string>
    <string name="hoarders">Hoarders</string>
    <string name="fall_ball">Fall Ball</string>
    <string name="jinxed">Jinxed</string>
    <string name="tip_toe">Tip Toe</string>
    <string name="tail_tag">Tail Tag</string>
    <string name="team_tail_tag">Team Tail Tag</string>
    <string name="royal_fumble">Royal Fumble</string>
    <string name="fall_mountain">Fall Mountain</string>
    <string name="hex_a_gone">Hex A Gone</string>
    <string name="jump_showdown">Jump Showdown</string>
    <string name="door_dash">Door Dash</string>
    <string name="gate_crash">Gate Crash</string>
    <string name="perfect_match">Perfect Match</string>
    <string name="perfect_match_text">
        1. Always stay on the thing, that is the hardest for you to remember. Let\'s say there are 3 different fruit tiles: grapes, melons and bananas. I would personally prefer to stay on the grapes and remember a melon and banana tile. If I have to, I will jump onto the right tile.\n\n
        2. There isn\'t much more to say about this game, since it is fairly easy. If you want to be a little bit mean though, you can always jump onto a wrong tile first and save yourself with a dive-jump onto the right tile in the last second. You will easily get Fall Guys eliminated, who are just following others.
    </string>
    <string name="gate_crash_text">
        1. Always run towards the closed gates, they will be open by the time you arrive there. It can take a little bit of time to get used to the timing of the gates, but it will help you a lot with being one of the first Fall Guys to reach the slide.\n\n
        2. Do the same thing at the slide. Once you are halfway down the slide check for the closed gate(s) and slide towards them. Don\'t forget to jump!\n\n
        3. Dive-jumping can help you get over gates, which started to close up already.
    </string>
    <string name="door_dash_text">
        1. Try to stay a little bit behind and let the other Fall Guys figure out which door is the right one.\n\n
        2. If multiple doors have been dashed already, always take the path with less Fall Guys following the same route.\n\n
        3. You are less likely to fall over while dive-jumping through the open gates.\n\n
        4. If you are one of the first Fall Guys to reach the last 3 doors, either risk a worse placement and jump through a door of your choice or stay behind for a bit and dive-jump through the right gate, once the other Fall Guys have figured it out.
    </string>
    <string name="jump_showdown_text">
        1. It is possible to jump over empty slots with the size of one tile. Walk up to one of the top-most corners of your tile and try to dive-jump onto the tile next to you.\n\n
        2. When you are trying to jump over to the next available tile, try to time it so that the bar is right in between your tile and the tile that you want to jump on, if there is one incoming.\n\n
        3. Use the full potential of your tile at all times. I have seen people fall off the last tile, because they wouldn\'t position themselves in a way to make the jump.\n\n
        4. The smartest way to jump over the bar would be to walk towards it, as you will pass it and it will pass you more quickly. However, still consider the movement and timing of the top bars to not get hit by them.\n\n
        5. If you are on one of the last tiles and both of the bars come at you while being stacked on top of each other, try to walk to the far side of your tile and jump so that the bottom bar will hit your \"legs\" first and fling you right behind itself. This doesn\'t always work and should only be used when there is no other escape left.
    </string>
    <string name="hex_a_gone_text">
        1. If there is a free tile right at the start of the match, try to jump onto it.\n\n
        2. Try to avoid dive-jumping as much as possible, as it can sometimes take too long to get back onto your feet, which will cause you to fall down a floor.\n\n
        3. When you are at a lower floor than your opponents, try to make one big hole instead of multiple small holes. If you get lucky, someone from above might fall right through your hole.\n\n
        4. If you are one of the players who managed to stay on the top floors, use the slow jump trick. There is a certain amount of time that you can stay on a tile before it will start \"crumbling\". Wait till the tile that you are staying on starts to crumble and only then jump to the next one. While you are doing this, keep your mouse at an angle so that you can spot free tiles below you, as you will eventually have to drop down one floor.
    </string>
    <string name="fall_mountain_text">
        1. This game is quite fun, but can be random at times. It depends on a lot of factors like your spawn position, the obstacles that get thrown your way and so on.\n\n
        2. When passing through the spinning gates make sure that there is no rock incoming, because it will either hit you and throw you back or hit the other side of the gate and lose you your momentum right after flinging you away.\n\n
        3. Once you are at the rotating hammers, wait until one of them is right infront of you and then start walking through it. You will avoid getting hit this way. It is important that you jump towards the direction that the hammer is spinning, because in the case that you get hit, you will at least be boosted forward a bit.\n\n
        4. As for the crown, patience is key yet again. Wait until it is at a height at which you can grab it or jump and grab it.\n\n
        5. Do NOT dive-jump towards the crown. It won\'t allow you to grab it.
    </string>
    <string name="royal_fumble_text">
        1. While this is still a Tail Tag game, there is only one tail this time around.\n\n
        2. If you start with the tail, just try to stay ahead of everyone else by using the map to your advantage. Use the jumps and try to get the Fall Guys following you hit by the swinging balls or get a good boost on the rotating mats.\n\n
        3. If you start without the tail, try and follow the tail holder. It is important to cut the them off. You don\'t have to follow them up every ramp, especially if other Fall Guys are already doing that. Just stay on the bottom floor and keep your eyes on the direction that the tail holder is heading. There is a good chance that they will slip and fall, once they jump to the bottom floor. Thats when you should try and grab it.\n\n
        4. Additionally, most of the Fall Guys should be crowded up in an area within the last 30 seconds of the game if you are lucky. Try to stay right behind that crowd and grab the tail whenever you see some Fall Guys slipping, falling behind and the tail switching owners a lot. As soon as you have the tail, try and walk the remaining seconds in a mostly straight path to keep your momentum.
    </string>
    <string name="team_tail_tag_text">
        1. As in all team games, your success doesn\'t rely on you alone.\n\n
        2. Try to stay calm and play it smart.\n\n
        3. Fall Guys with a tail will usually hide right next to the base of the swinging/rotating hammers. Stay infront of one and start walking towards the hiding Fall Guys, once the hammer is right infront of you. This will make sure that you won\'t get hit.\n\n
        4. Don\'t try to aggro your way to the Fall Guys hiding there. You will usually end up getting hit multiple times and the Fall Guys will manage to flee by the time that you are on your feet again.\n\n
        5. If you are one of the Fall Guys with a tail, try and cut corners. I see a lot of people just regulary walking up the ramps to the top floors. This is about life and death, if you want to take clean corners play Assetto Corsa or Forza.\n\n
        6. In case that you have a tail and Fall Guys are catching up with you, use the hammers at the corners for your own good and let them yeet you into the middle of the bottom floor of the map.
    </string>
    <string name="tail_tag_text">
        1. It can be frustrating when you grab other Fall Guys, but the game doesn\'t give you the tail. Keep your calm and focus on what\'s important.\n\n
        2. This doesn\'t happen as often, but there usually will be one or two Fall Guys running in circles in the middle of the map, right under the ramps. Walk counter-clockwise to them and spam your grab key, you might get lucky.\n\n
        3. Also in the middle of the map, there will definitely be Fall Guys hiding right at the base of the hammer. Don\'t rush it and wait until the hammer is right infront of you, before you start walking towards the base. This will avoid you getting hit.\n\n
        4. Once you have the tail yourself, there isn\'t much else that you can do. Go and hide at the base of the hammer or walk in circles under the ramps.
    </string>
    <string name="tip_toe_text">
        1. This is another easy game. Just stay back and let the other Fall Guys do most or all of the work.\n\n
        2. You will most likely get pushed onto other tiles (which are probably going to be the wrong ones) by other Fall Guys. Because of this, try to not be on the latest discovered tile and stay back for a little bit.\n\n
        3. It is possible to skip the last line of tiles and dive-jump right into the finish line.\n\n
        4. If you feel lucky, you can try to rush the last 2 lines of tiles and get to be first place. For this, try to hit the correct tile in the second-to-last line and dive-jump to skip the last line of tiles, as described in tip no 3. Remember that you will be spawned at the starting point, if you risk it and hit a wrong tile.\n\n
        5. If you wait for long enough, you will notice that some of the tiles do shake. The shaky tiles are the ones that will crumble, once you step onto them. It can be a good idea to observe the shaky tiles and figure out which ones are actually solid. This is highly useful, once you hit the last 2 rows of tiles.
    </string>
    <string name="jinxed_text">
        1. For some reason, the rotating mats seem to be the safest places at the start of this game. Get onto one and jump into the purple middle part of it, so that you won\'t get spun around.\n\n
        2. As the number of the jinxed Fall Guys increases, your rotating mat will eventually get unsafe. At this point there should be jinxed players all over the map though, so your best option is to just keep running towards regular people, empty places or pass jinxed players who are focused on hunting other Fall Guys.\n\n
        3. You can make the jump without falling into the trenches. Just dive-jump as usual. Bonus points if you get any other Fall Guys hit by the swinging balls (not actually, but it\'s fun).\n\n
        4. Another good way of doing this is to let the enemy infect you so that you can start infecting everyone else yourself.
    </string>
</resources>