<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/main"
        android:background="#0652DD"
>
    <ImageView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="204dp" app:srcCompat="@drawable/fallguys"
            android:id="@+id/imageView" android:contentDescription="@string/background"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/scrollView3"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <ScrollView
            android:layout_width="392dp"
            android:layout_height="397dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintVertical_bias="0.637" android:id="@+id/scrollView3">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="center"
        >

            <Button
                    android:layout_width="335dp"
                    android:layout_height="55dp"
                    android:id="@+id/roll_out_btn"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:onClick="roll_func"
                    android:layout_marginBottom="10dp"
                    android:text="@string/roll_out"/>
            <Button
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/see_saw_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:onClick="see_saw"
                    android:layout_marginBottom="10dp"
                    android:text="@string/see_saw"/>
            <Button
                    android:text="@string/hit_parade"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/hit_parade_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="hit_parade"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/block_party"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/block_party_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="block_party"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/rock"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/rock_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="rock"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/egg_scramble"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/egg_scramble_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="egg_scramble"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/dizzy_heights"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/dizzy_heights_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="dizzy_heights"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/hoopsie_daisy"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/hoopsie_daisy_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="hoopsie_daisy"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/whirlygig"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/whirlygig_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="whirlygig"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/slime_climb"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/slime_climb_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="slime_climb"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/fruit_chute"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/fruit_chute_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="fruit_chute"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/jump_club"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/jump_club_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="jump_club"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/hoarders"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/hoarders_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="hoarders"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/fall_ball"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/fall_ball_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="fall_ball"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/jinxed"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/jinxed_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="jinxed"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/tip_toe"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/tip_toe_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="tip_toe"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/tail_tag"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/tail_tag_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="tail_tag"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/team_tail_tag"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/team_tail_tag_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="team_tail_tag"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/royal_fumble"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/royal_fumble_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="royal_fumble"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/fall_mountain"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/fall_mountain_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="fall_mountain"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/hex_a_gone"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/hex_a_gone_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="hex_a_gone"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/jump_showdown"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/jump_showdown_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="jump_showdown"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/door_dash"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/door_dash_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="door_dash"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/gate_crash"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/gate_crash_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="gate_crash"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
            <Button
                    android:text="@string/perfect_match"
                    android:layout_height="55dp"
                    android:layout_width="335dp"
                    android:id="@+id/perfect_match_btn"
                    android:fontFamily="@font/baloo"
                    android:background="#FC427B"
                    android:onClick="perfect_match"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginBottom="10dp"
            />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
