<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="#0652DD"
>
    <ScrollView
            android:layout_width="350dp"
            android:layout_height="300dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/scrollView2" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="130dp" android:background="@drawable/shadow">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
        >
            <TextView

                    android:text="@string/fall_mountain_text"
                    android:fontFamily="@font/baloo"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textView3"
                    android:padding="15dp"


            />

        </LinearLayout>
    </ScrollView>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/back_btn"
            android:onClick="back"
            android:background="#FC427B"
            android:shadowColor="#222f3e"
            android:fontFamily="@font/baloo"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.95" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976"/>
    <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="419dp"
            android:layout_height="175dp"
            app:srcCompat="@drawable/fall_mountain"
            android:id="@+id/fall_mountain_img"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/fall_mountain"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"/>
</androidx.constraintlayout.widget.ConstraintLayout>